<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <TextView
        android:id="@+id/labelEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloCadastro"
        android:textSize="40sp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-->
        ID DO FILME
    <!-->
    <EditText
        android:id="@+id/etId"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#4535"
        android:hint="@string/hintId"
        android:textColor="@color/SecundaryRed"
        android:textSize="35sp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/labelEntrada"
        app:layout_constraintStart_toStartOf="@id/labelEntrada"
        app:layout_constraintTop_toBottomOf="@id/labelEntrada" />

    <!-->
        NOME DO FILME
    <!-->
    <EditText
        android:id="@+id/etNome"
        android:layout_width="350dp"
        android:layout_marginBottom="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#4535"
        android:hint="@string/hintNome"
        android:textColor="@color/SecundaryRed"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@id/etId"
        app:layout_constraintStart_toStartOf="@id/etId"
        app:layout_constraintTop_toBottomOf="@id/etId" />

    <!-->
        PREÇO DO FILME
    <!-->
    <EditText
        android:id="@+id/etPreco"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#4535"
        android:hint="@string/hintPreco"
        android:textColor="@color/SecundaryRed"
        android:textSize="35sp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/etNome"
        app:layout_constraintStart_toStartOf="@id/etNome"
        app:layout_constraintTop_toBottomOf="@id/etNome" />

    <!-->
       PRODUTORA DO FILME
   <!-->
    <EditText
        android:id="@+id/etProdutora"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#4535"
        android:hint="@string/hintProdutora"
        android:textColor="@color/SecundaryRed"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@id/etPreco"
        app:layout_constraintStart_toStartOf="@id/etPreco"
        app:layout_constraintTop_toBottomOf="@id/etPreco" />

    <!-->
       DESCRIÇÃO DO FILME
   <!-->
    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="#4535"
        android:hint="@string/hintDescricao"
        android:textColor="@color/SecundaryRed"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/etProdutora"
        app:layout_constraintStart_toStartOf="@id/etProdutora"
        app:layout_constraintTop_toBottomOf="@id/etProdutora" />


    <Button
        android:id="@+id/btSomar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/SecundaryRed"
        android:text="@string/textoBotaoCdastro"
        android:layout_margin="20dp"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/etPreco"
        app:layout_constraintEnd_toEndOf="@id/etDescricao"
        app:layout_constraintStart_toEndOf="@id/etDescricao"
        app:layout_constraintTop_toBottomOf="@id/etDescricao" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescricao"
        app:layout_constraintVertical_bias="1.0">

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>