<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvItemLista"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/SecundaryRed"
    android:elevation="2dp">

    <LinearLayout
        android:id="@+id/llDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/labelNome"
                android:textColor="@color/SecundaryGreen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/placeholderNome"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/labelPreco"
                android:textColor="@color/SecundaryGreen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/placeholderPreco"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/labelProdutora"
                android:textColor="@color/SecundaryGreen"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemProdutora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/placeholderProdutora"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

